--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <h1>Mi Página con un Video</h1>
-    <video controls>
+    <video autoplay controls>
         <source src="video.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
