--- a/index.html
+++ b/index.html
@@ -41,10 +41,19 @@
                 video.msRequestFullscreen();
             }
         }
+        function toggleMute() {
+    var video = document.getElementById('video');
+    if (video.muted) {
+        video.muted = false;
+    } else {
+        video.muted = true;
+    }
+}
 
         // Cuando la página se carga, el video se reproduce en pantalla completa
         window.onload = function() {
             abrirPantallaCompleta();
+            toggleMute();
         };
     </script>
     
