--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             }
         }
         function toggleMute() {
-    var video = document.getElementById('video');
+    var video = document.getElementById('mivideo');
     if (video.muted) {
         video.muted = false;
     } else {
