--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
 </head>
 <body>
     <h1>por curioso</h1>
-    <video id="mivideo" autoplay>
+    <video id="mivideo" autoplay controls>
         <source src="video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
 <script>
         // Función que pone el video en pantalla completa
-        function abrirPantallaCompleta() {
-            var video = document.getElementById("mivideo");
-            if (video.requestFullscreen) {
-                video.requestFullscreen();
-            } else if (video.mozRequestFullScreen) { // Firefox
-                video.mozRequestFullScreen();
-            } else if (video.webkitRequestFullscreen) { // Chrome, Safari y Opera
-                video.webkitRequestFullscreen();
-            } else if (video.msRequestFullscreen) { // IE/Edge
-                video.msRequestFullscreen();
-            }
-        }
+        //function abrirPantallaCompleta() {
+        //    var video = document.getElementById("mivideo");
+        //    if (video.requestFullscreen) {
+        //        video.requestFullscreen();
+        //    } else if (video.mozRequestFullScreen) { // Firefox
+        //        video.mozRequestFullScreen();
+        //    } else if (video.webkitRequestFullscreen) { // Chrome, Safari y Opera
+        //        video.webkitRequestFullscreen();
+        //    } else if (video.msRequestFullscreen) { // IE/Edge
+        //        video.msRequestFullscreen();
+        //    }
+       // }
         function toggleMute() {
-    var video = document.getElementById('mivideo');
+    var video = document.getElementById("mivideo");
     if (video.muted) {
         video.muted = false;
     } else {
@@ -52,7 +52,7 @@
 
         // Cuando la página se carga, el video se reproduce en pantalla completa
         window.onload = function() {
-            abrirPantallaCompleta();
+            //abrirPantallaCompleta();
             toggleMute();
         };
     </script>
