--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>por curioso</h1>
-    <video id="mivideo" autoplay muted controls>
+    <video id="mivideo" autoplay muted loop controls>
         <source src="video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
