--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     if (video.muted) {
         video.muted = false;
     } else {
-        video.muted = true;
+        video.muted = false;
     }
 }
 
