--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             var video = document.getElementById("miVideo");
             video.style.display = 'block'; // Mostrar el video
             video.muted = false; // Desmutear el video
-            video.play(); // Iniciar reproducción
+            //video.play(); // Iniciar reproducción
             document.removeEventListener('mousemove', arguments.callee); // Eliminar listener después de la primera interacción
         });
     </script>
