--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
             var video = document.getElementById("miVideo");
             video.style.display = 'block'; // Mostrar el video
             video.muted = false; // Desmutear el video
-             video.play().catch(function(error) {
-                console.log("No se pudo reproducir el video:", error);
-                });
+            video.play();
             document.removeEventListener('mousemove', arguments.callee); // Eliminar listener después de la primera interacción
         });
     </script>
