--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h1>por curioso</h1>
-     <video id="miVideo" preload="auto"  muted loop>
+     <video id="miVideo" preload="auto"  muted loop controls>
         <source src="video.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
