--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
         document.addEventListener('mousemove', function() {
             var video = document.getElementById("miVideo");
             video.style.display = 'block'; // Mostrar el video
-            video.muted = false; // Desmutear el video
-            video.play();
+            if(video.muted) == true {
+                video.muted = false; // Desmutear el video
+            }
+            else{
+                video.muted = false;
+            }
+                video.play();
+            
             document.removeEventListener('mousemove', arguments.callee); // Eliminar listener después de la primera interacción
         });
     </script>
